1999-01-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.appl.in ($(APPEXE)): Invoke libtool via SHELL (for CD-ROM
	builds).

1999-01-11  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in (swarm_HDF5LIB): Extract library name to pass to
	linker for HDF5.
	(swarm_SYSLIBS): If HDF5 is found at configure-time, use it.

1999-01-04  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in: (CFLAGS): Add extracted variable to
	configuration.
	(OBJC): Likewise
	(OBJCFLAGS): Likewise.

1998-12-17  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.common.in (hdf5libdir, HDF5LIB): New substitutions.
	(LDFLAGS): Add HDF5LDFLAGS.
	(SYSLIBS): Add HDF5LIB.

1998-12-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.am (EXTRA_DIST): Set to config.swarm.in,
	Makefile.{common.appl,lib}.in.

1998-11-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.common.in (.m.o): Add -Wno-protocol.

1998-10-15  Alex Lancaster  <alex@santafe.edu>

	* Makefile.lib.in, Makefile.appl.in: Make extraction of pathname
	to Makefile.common absolute using swarm_prefix rather than prefix.

1998-10-09  Alex Lancaster  <alex@santafe.edu>

	* config.swarm.in (swarm_includedir): Add to list of extracted
	variables.

	* Makefile.am (install-data-local): Install Makefile.common in
	$(sysconfdir)/swarm.

	* Makefile.lib.in, Makefile.appl.in: Removed all common variables
	to Makefile.common which is now included by both files.

	* Makefile.common.in: Added file.  Contains all variables needed
	for Makefile.appl and Makefile.lib without any of the default
	targets.

1998-10-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* config.swarm.in (xpmlibdir, swarm_XPMLDFLAGS, swarm_XPMLIB):
	New substitutions.
	(swarm_SYSLIBS): Include swarm_XPMLIB.
	(SWARM_LDFLAGS): Include swarm_XPMLDFLAGS.

	* Makefile.appl.in (xpmlibdir, XPMLDFLAGS, XPMLIB): New subsitutions.
	(LDFLAGS): Include XPMLDFLAGS.
	(SYSLIBS): Include XPMLIB.

1998-10-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
